# SbtDeskTran

./: .env.example  .gitignore  CHANGELOG.md  README.md  SbtDeskTran.bat  app.py  app_paths.py  build.bat  ci_release.py  create_icon.py  diff_engine.py  index.html  logger.py  main.py  network.py  package-lock.json  package.json  theme.py  translator_engine.py  updater.py  version.json  version.py  version_changes.txt  vite.config.ts  widgets.py
.github/workflows/: build.yml
scripts/: build-exe.mjs  build.mjs  generate-signing-key.ps1  set-version.mjs  set-windows-product-version.mjs  validate-updater-release.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: diff.rs  mod.rs  network.rs  notes.rs  settings.rs  translate.rs  updater.rs  window.rs
src-tauri/src/engine/: diff.rs  mod.rs  network.rs  translator.rs
src-tauri/src/models/: notes.rs
src/lib/components/: AboutDialog.svelte  AppDialog.svelte  AppIcon.svelte  CmEditor.svelte  CompactBar.svelte  ContextMenu.svelte  DeleteConfirm.svelte  DiffEditor.svelte  FindBar.svelte  HelpDialog.svelte  LangBar.svelte  PopupDict.svelte  StatusBar.svelte  TopBar.svelte
src/lib/stores/: settings.ts  theme.ts
src/lib/tabs/: DiffTab.svelte  NotesTab.svelte  TranslateTab.svelte
src/lib/utils/: editorKeybindings.ts  languages.ts  monaco.ts  monacoFindTooltip.ts  updater.ts  version.ts
